@@ -223,6 +223,12 @@ keys) of your keyboard. You can define which program will be executed while
 pressing a key.
 </ul>
 
+<ul>
+<li><a href="http://xcave.free.fr">Xcave</a>
+- a wine manager for linux users.
+</ul>
+
+
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
 <li><a href=""></a> -
@@ -347,11 +353,6 @@ app.
 <li><a href="http://www.jukie.net/~bart/gfirewall/">Fire Gnome</a>
 - a firewalling toolkit for ipchains (initially). 
 In early stages of development.
-</ul>
-
-<ul>
-<li><a href="http://xcave.free.fr">Xcave</a>
-- a wine manager for linux users.
 </ul>
 
 <ul>
