@@ -1,3 +1,7 @@
+2005-01-07  Damon Chaplin  <damon@gnome.org>
+
+	* apps.html: moved xcave from Glade 1 to Glade 2 section.
+
 2004-12-21  Damon Chaplin  <damon@gnome.org>
 
 	* history.html: 
